--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.log4j.cve</groupId>
-	<artifactId>log4j2-cve-2021-45105</artifactId>
+	<artifactId>log4j2-cveDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
