--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>com.log4j.cve</groupId>
 	<artifactId>log4j2-cveDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
